tests/test_input_files/good/test_good_str_decl_3.punkt
main {
    const a = " ".
    print a.
}
