tests/test_input_files/bad/test_bad_str_decl_3.punkt
main {
	const str = "a" "b" ".
}
